Added... the whole project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Heyo!</h1>
+    <div class="container">
+        <div class="panel active" style="background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.kym-cdn.com%2Fentries%2Ficons%2Foriginal%2F000%2F029%2F831%2Fspongebobmeme.jpg&f=1&nofb=1&ipt=295340c383986ff86b8c7e942b691c2444c7d3ef07a44feb32810abc829fcece&ipo=images')">
+            <h3>Humiliation</h3>
+        </div>
+        <div class="panel" style="background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2FYIKpr4k0ZJoAAAAC%2Fmike-wazowski-dissapointed.gif&f=1&nofb=1&ipt=9dfdcfd127207b5aae3b3d1c9235ed85d457ea2250294a1be9b88a7770616966&ipo=images')">
+            <h3>Disappointment</h3>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
